test/Fail/Issue3451.err
Issue3451.agda:5,1-30: error: [GenericError]
Cannot declare size BUILTIN SIZE with option --no-sized-types
when checking the pragma BUILTIN SIZE Size
